--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "barryvdh/laravel-dompdf": "^3.0",
         "fedapay/fedapay-php": "^0.4.7",
-        "grimzy/laravel-mysql-spatial": "dev-l10-compatibility",
+        "matanyadaev/laravel-eloquent-spatial": "^4.5",
         "guzzlehttp/guzzle": "^7.2",
         "inertiajs/inertia-laravel": "^0.6.8",
         "intervention/image": "^3.7",
@@ -87,11 +87,5 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true,
-    "repositories": {
-        "grimzy/laravel-mysql-spatial": {
-            "type": "git",
-            "url": "https://github.com/grimzy/laravel-mysql-spatial.git"
-        }
-    }
+    "prefer-stable": true
 }
